sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:8: error: not found: value écart
		if (getValeur(i+écart)<getValeur(i)) {
                                ^