sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
var ecart=getNombreValeurs()-1;
if (ecart>1) {
	ecart = (ecart.toDouble / 1.3).toInt
	var i=0;
	while (i+ecart < (getNombreValeurs()-1)) {
		if (getValeur(i+écart)<getValeur(i)) {
			echange(i, i+ecart);
			i=i+1;
			
		}
	}	
}
}

